# smart_display_master

./: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
components/lvgl/: lv_conf_template.h
components/lvgl_esp32_drivers/: lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: st7735s.h
main/: CMakeLists.txt  main.c
main/sdp/: Readme.txt
main/sdp/sdp_buzzer_mgr/: sdp_bm.c  sdp_bm.h
main/sdp/sdp_display_mgr/: sdp_dm.c  sdp_dm.h
main/sdp/sdp_info_mgr/: sdp_im.c  sdp_im.h
main/sdp/sdp_key_mgr/: sdp_km.c  sdp_km.h
main/sdp/sdp_utils/: sdp_utils.h
main/ui/: CMakeLists.txt  bee_128_128.c  dragon_panda_128_128_01.c  dragon_panda_128_128_02.c  dragon_panda_128_128_03.c  dragon_panda_gif.c  example.c  filelist.txt  gihpy_90.c  rocket_128_128_01.c  ui.c  ui.h  ui_events.h
main/ui/images/: ui_img_lehman_logo_png.c
main/ui/screens/: ui_Screen1.c
tmp/sdp/sdp_display_mgr/: sdp_dm.c  sdp_dm.h
