idf_component_register(SRCS "main.c"
                            "sdp/sdp_info_mgr/sdp_im.c"
                            "sdp/sdp_display_mgr/sdp_dm.c"
                    INCLUDE_DIRS "sdp/sdp_info_mgr"
                                 "sdp/sdp_utils"
                                 "sdp/sdp_display_mgr")
