idf_component_register(SRCS "main.c"
                            "sdp/sdp_info_mgr/sdp_im.c"
                            "sdp/sdp_display_mgr/sdp_dm.c"
                            "ui/ui_helpers.c"
                            "ui/ui.c"
                            "ui/images/ui_img_lehman_logo_png.c"
                            "ui/screens/ui_Screen1.c"
                            "ui/example.c"
                            "ui/dragon_panda_128_128_01.c"
                            "ui/dragon_panda_128_128_02.c"
                            "ui/dragon_panda_128_128_03.c"
                            "ui/rocket_128_128_01.c"
                            "ui/bee_128_128.c"
                            "sdp/sdp_key_mgr/sdp_km.c"
                            "sdp/sdp_buzzer_mgr/sdp_bm.c"
                    INCLUDE_DIRS "sdp/sdp_info_mgr"
                                 "sdp/sdp_utils"
                                 "sdp/sdp_display_mgr"
                                 "ui"
                                 "sdp/sdp_key_mgr"
                                 "sdp/sdp_buzzer_mgr")
